accessing configuration from D.I. container

--- a/src/TennisBookings/appsettings.json
+++ b/src/TennisBookings/appsettings.json
@@ -7,6 +7,9 @@
   },
 
   "AllowedHosts": "*",
+  "Features": {
+    "EnableWeatherForecast":  true
+  },
 
   "ClubSettings": {
     "PeakStartHour": 16,
